[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]

simplexpr = { version = "0.1.0", path = "crates/simplexpr" }
eww_shared_util = { version = "0.1.0", path = "crates/eww_shared_util" }
yuck = { version = "0.1.0", path = "crates/yuck", default-features = false}

anyhow = "1.0.79"
bincode = "1.3.3"
cached = "0.42.0"
chrono = "0.4.26"
chrono-tz = "0.8.2"
clap = {version = "4.3.21", features = ["derive"] }
codespan-reporting = "0.11"
derive_more = "0.99"
extend = "1.2"
futures = "0.3.28"
grass = {version = "0.13.1", default-features = false}
insta = "1.7"
itertools = "0.12.1"
jaq-core = "0.9.0"
jaq-std = {version = "0.9.0", features = ["bincode"]}
lalrpop = "0.19.5"
lalrpop-util = "0.19.5"
libc = "0.2"
log = "0.4"
maplit = "1"
nix = "0.26.2"
notify = "6.0.1"
once_cell = "1.18"
pretty_assertions = "1.2"
pretty_env_logger = "0.5"
ref-cast = "1.0.22"
regex = "1.10.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
simple-signal = "1.1"
smart-default = "0.6"
static_assertions = "1.1"
strsim = "0.10"
strum = { version = "0.24", features = ["derive"] }
sysinfo = "0.29.8"
thiserror = "1.0"
tokio-util = "0.7.8"
tokio = { version = "1.31.0", features = ["full"] }
unescape = "0.1"
wait-timeout = "0.2"

[profile.dev]
split-debuginfo = "unpacked"

