[package]
name = "eww_shared_util"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "Utility crate used in eww"
repository = "https://github.com/elkowar/eww"
homepage = "https://github.com/elkowar/eww"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
derive_more = "0.99"
ref-cast = "1.0.6"
