[package]
name = "notifier_host"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "SystemNotifierHost implementation"
repository = "https://github.com/elkowar/eww"
homepage = "https://github.com/elkowar/eww"

[dependencies]
gtk = { version = "0.17.1" }
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.31.0", features = ["full"] }
zbus = { version = "3.7.0", default-features = false, features = ["tokio"] }
dbusmenu-gtk3 = "0.1.0"
