[package]
name = "notifier_host"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "SystemNotifierHost implementation"
repository = "https://github.com/elkowar/eww"
homepage = "https://github.com/elkowar/eww"

[dependencies]
dbusmenu-gtk3 = "0.1.0"

gtk.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
zbus = { workspace = true, default-features = false, features = ["tokio"] }
