[package]
name = "simplexpr"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "A simple expression language, used as a part of eww"
repository = "https://github.com/elkowar/eww"
homepage = "https://github.com/elkowar/eww"


build = "build.rs"

[dependencies]
lalrpop-util = "0.19.5"
regex = "1.5.5"
itertools = "0.10"
thiserror = "1.0"

once_cell = "1.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
strsim = "0.10"

strum = { version = "0.24", features = ["derive"] }

eww_shared_util = { version = "0.1.0", path = "../eww_shared_util" }


[build-dependencies]
lalrpop = "0.19.5"

[dev-dependencies]
insta = "1.7"
