[package]
name = "simplexpr"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "A simple expression language, used as a part of eww"
repository = "https://github.com/elkowar/eww"
homepage = "https://github.com/elkowar/eww"


build = "build.rs"

[dependencies]
eww_shared_util.workspace = true

cached.workspace = true
chrono-tz.workspace = true
chrono = { workspace = true, features = ["unstable-locales"] }
itertools.workspace = true
jaq-core.workspace = true
jaq-parse.workspace = true
jaq-std.workspace = true
jaq-interpret.workspace = true
jaq-syn.workspace = true
lalrpop-util.workspace = true
once_cell.workspace = true
regex.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
static_assertions.workspace = true
strsim.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true


[build-dependencies]
lalrpop.workspace = true

[dev-dependencies]
insta.workspace = true
