[package]
name = "yuck"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "Implementation of the yuck language, the declarative UI description language used by eww"
repository = "https://github.com/elkowar/eww"
homepage = "https://github.com/elkowar/eww"

build = "build.rs"

[features]
default = ["x11"]
x11 = []
wayland = []

[dependencies]
lalrpop-util = "0.19.5"
regex = "1.5.5"
itertools = "0.10"
thiserror = "1.0"
maplit = "1.0"
codespan-reporting = "0.11"

derive_more = "0.99"
smart-default = "0.6"
serde = {version = "1.0", features = ["derive"]}
once_cell = "1.8"

strum = { version = "0.24", features = ["derive"] }
anyhow = "1"
static_assertions = "1.1"

simplexpr = { version = "0.1.0", path = "../simplexpr" }
eww_shared_util = { version = "0.1.0", path = "../eww_shared_util" }


[build-dependencies]
lalrpop = "0.19.5"

[dev-dependencies]
insta = "1.7"
pretty_assertions = "1.2"
